# azuuKuy

./: .gitignore  .swiftlint.yml  README.md  exportOptions.plist  install.sh  pkgbuild.sh
.github/workflows/: release.yml  swift.yml
Casks/: azuukuy.rb
Core/: Package.swift
Core/Plugins/GitInfoPlugin/: plugin.swift
Core/Sources/Core/Configs/: AppGroup.swift  Config.swift  CustomInputTableStore.swift  IntConfigItem.swift  KeyboardShortcutConfigItem.swift  PuntuationConfigItem.swift
Core/Sources/Core/Extensions/: InputPiece+String.swift
Core/Sources/Core/InputUtils/: DiacriticAttacher.swift  KeyEventCore.swift
Core/Sources/Core/InputUtils/Actions/: ClientAction.swift  UserAction.swift
Core/Sources/Core/KeyMap/: KeyMap+hankaku2zenkaku.swift
Core/Sources/Core/MagicConversion/: AIBackend.swift  FoundationModelsClient.swift
Core/Sources/git-info-generator/: main.swift
Core/Tests/CoreTests/InputUtilsTests/: SegmentsManagerPredictionCandidateTests.swift  UserActionOptionPunctuationTests.swift
Core/Tests/CoreTests/UserDictionaryTests/: UserDictionaryTests.swift
Formula/: azuukuy.rb
MoZuku/: .gitignore  README.md  flake.nix
MoZuku/mozuku-grammar/: CMakeLists.txt
MoZuku/mozuku-lsp/: CMakeLists.txt
MoZuku/mozuku-lsp/include/: analyzer.hpp  encoding_utils.hpp  grammar_checker.hpp  lsp.hpp  pos_analyzer.hpp  text_processor.hpp  utf16.hpp
MoZuku/mozuku-lsp/include/mozuku/core/: config.hpp
MoZuku/mozuku-lsp/src/: comment_extractor.cpp  document_preprocessor.cpp  grammar_checker.cpp  lsp.cpp  mecab_manager.cpp  pos_analyzer.cpp  presenter.cpp  text_processor.cpp  tree_sitter_document.cpp
MoZuku/patches/: crfpp_fix.patch
MoZuku/vim-mozuku/: README.md
MoZuku/vim-mozuku/autoload/: mozuku.vim
MoZuku/vim-mozuku/lua/: mozuku.lua
MoZuku/vim-mozuku/plugin/: mozuku.vim
MoZuku/vscode-mozuku/: README.md  build-lsp.js  package.json
MoZuku/vscode-mozuku/src/: client.ts  config.ts  extension.ts  server-discovery.ts
MoZukuGrammar/: CMakeLists.txt
MoZukuGrammar/include/: mecab_manager.hpp  mozuku_bridge.h
MoZukuGrammar/include/mozuku/analysis/: document_preprocessor.hpp
MoZukuGrammar/include/mozuku/core/: debug.hpp  types.hpp
MoZukuGrammar/include/mozuku/lsp/: presenter.hpp
MoZukuGrammar/include/mozuku/treesitter/: document.hpp
MoZukuGrammar/src/: analyzer.cpp  encoding_utils.cpp  mozuku_bridge.cpp  utf16.cpp
azooKey-Desktop/: .gitignore  .gitmodules  install.sh
azooKey-Desktop/Core/Sources/Core/Configs/: BoolConfigItem.swift  CustomCodableConfigItem.swift  DeprecatedConfigItem.swift  StringConfigItem.swift
azooKey-Desktop/Core/Sources/Core/InputUtils/: CandidatePresentationContext.swift  DebugTypoCorrectionWeights.swift  InputLanguage.swift  InputState.swift  SegmentsManager.swift
azooKey-Desktop/Core/Sources/Core/KeyMap/: KeyMap.swift
azooKey-Desktop/Core/Sources/Core/MagicConversion/: OpenAIClient.swift
azooKey-Desktop/Core/Sources/Core/Metadata/: Git.swift
azooKey-Desktop/Core/Sources/Core/UserDictionary/: SystemUserDictionaryHelper.swift
azooKey-Desktop/Core/Sources/Core/Windows/: WindowPositioning.swift
azooKey-Desktop/Core/Tests/CoreTests/InputUtilsTests/: SegmentsManagerAdditionalCandidatesTests.swift  SegmentsManagerPredictionBackspaceCorrectionTests.swift
azooKey-Desktop/Core/Tests/CoreTests/KeyMapTests/: KeyMapTests.swift
azooKey-Desktop/Core/Tests/CoreTests/MetadataTests/: MetadataTests.swift
azooKey-Desktop/Core/Tests/CoreTests/WindowsTests/: WindowPositioningTests.swift
azooKey-Desktop/azooKeyMac/: AppDelegate.swift
azooKey-Desktop/azooKeyMac.xcodeproj/: project.pbxproj
azooKey-Desktop/azooKeyMac/GrammarChecker/: GrammarWarningWindow.swift  MoZukuBridge.h
azooKey-Desktop/azooKeyMac/InputController/: NSEvent.swift  WindowPositioning+CoreGraphics.swift  azooKeyMacInputController+SelectedTextTransform.swift  azooKeyMacInputControllerHelper.swift
azooKey-Desktop/azooKeyMac/Windows/: ConfigWindow.swift  KeyboardShortcutRecorder.swift  RomajiTableEditorWindow.swift
azooKey-Desktop/azooKeyMac/Windows/PromptInput/: PromptInputView.swift  PromptInputWindow.swift
azooKeyMac/: Info.plist
azooKeyMac.xcodeproj/: project.pbxproj
azooKeyMac.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
azooKeyMac/Configs/: KeychainHelper.swift  SecureConfigItem.swift
azooKeyMac/GrammarChecker/: GrammarChecker.swift  GrammarWarningWindow.swift  azooKeyMac-Bridging-Header.h
azooKeyMac/InputController/: azooKeyMacInputController.swift
azooKeyMac/InputController/CandidateWindow/: BaseCandidateViewController.swift  CandidateView.swift
azooKeyMac/Windows/: ConfigState.swift  UserDictionaryEditorWindow.swift
azooKeyMac/Windows/PromptInput/: CustomTextField.swift  ModernButtonStyles.swift  PromptHistoryItem.swift
azooKeyMac/en.lproj/: InfoPlist.strings
